# noir-sidecar

./: Cargo.toml
configs/: config.toml
src/: cli.rs  config.rs  lib.rs  logger.rs  main.rs  server.rs
src/client/: error.rs  mod.rs  solana.rs
src/db/: mod.rs  postgres.rs  sqlite.rs
src/db/index/: account.rs  mod.rs  postgres.rs  sqlite.rs  traits.rs
src/db/sqlite/: mod.rs  query.rs
src/event/: mod.rs
src/router/: mod.rs
src/rpc/: cosmos.rs  mod.rs  solana.rs
src/rpc/solana/: mock.rs  mod.rs
src/rpc/solana/mock/: mod.rs  svm.rs
