[package]
name = "noir-sidecar"
version = "0.1.0"
authors = ["code0xff <ian.jungyong.um@gmail.com>"]
repository = "https://github.com/NoirHQ/noir-sidecar"
description = "Noir SDK sidecar"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "noir_sidecar"
path = "src/lib.rs"

[[bin]]
name = "noir_sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7.9"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.23", features = ["derive"] }
hex = "0.4.3"
jsonrpsee = { version = "0.24.7", features = ["full"] }
noir-core-primitives = { git = "https://github.com/NoirHQ/noir", rev = "4c5ea4d68b0fe76af6a298ec63145b1b4d423cc1" }
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account-decoder = "2.1.5"
solana-inline-spl = "2.1.6"
solana-rpc-client-api = "2.1.5"
solana-runtime-api = { git = "https://github.com/NoirHQ/noir", rev = "4c5ea4d68b0fe76af6a298ec63145b1b4d423cc1" }
solana-sdk = "2.1.5"
solana-transaction-status = "2.1.6"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
